--- a/src/Presentation/Web/Views/Shared/_Layout.cshtml
+++ b/src/Presentation/Web/Views/Shared/_Layout.cshtml
@@ -59,9 +59,10 @@
             </div>
         </nav>
     </header>
-
-        <partial name="_Notification" />
-        @RenderBody()
+    <div class="container">
+        <main role="main" class="pb-3">
+            @RenderBody()
+        </main>
     </div>
     <footer class="border-top footer text-muted">
         <div class="container">
