--- a/src/Presentation/Web/Views/User/EditUser.cshtml
+++ b/src/Presentation/Web/Views/User/EditUser.cshtml
@@ -38,7 +38,7 @@
                 <span asp-validation-for="PhoneNumber" class="text-danger"></span>
             </div><br />
             <div class="xol-sm-2">
-                <label asp-for="Role" class="label-control"></label>
+                <label asp-for="Role" class="label-control" Multiple></label>
                 <select asp-for="Role" class="form-control">
                     @foreach(var role in Model.Roles)
                     {
