--- a/src/Presentation/Web/Views/User/UserDetails.cshtml
+++ b/src/Presentation/Web/Views/User/UserDetails.cshtml
@@ -61,5 +61,5 @@
     </dl>
 </div>
 <div>
-    <a asp-action="Index" class="btn btn-group-sm">Back to List</a>
+    <a asp-action="Index" class="btn btn-outline-dark">Back to List</a>
 </div>
