--- a/src/Presentation/Web/Views/Shared/_Layout.cshtml
+++ b/src/Presentation/Web/Views/Shared/_Layout.cshtml
@@ -41,7 +41,7 @@
                                 <a class="nav-link text-dark" asp-area="" asp-controller="Permission" asp-action="Index">Permission</a>
                             </li>
                              <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="UserRole" asp-action="Index">UserRole</a>
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Combine" asp-action="Index">UserRole</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link text-dark" asp-area="" asp-controller="User" asp-action="Logout">Logout</a>
