--- a/src/Presentation/Web/Views/User/Index.cshtml
+++ b/src/Presentation/Web/Views/User/Index.cshtml
@@ -66,7 +66,7 @@
                     <div class="w-75 btn-group" role="group">
                         <a title="Edit" asp-controller="User" asp-action="EditUser" asp-route-Id="@item.Id" class="btn btn-sm btn-primary mx-2"><i class="bi bi-pencil-square"></i></a>
                         <a title="Detail" asp-controller="User" asp-action="UserDetails" asp-route-Id="@item.Id" class="btn btn-sm btn-danger mx-2"><i class="bi bi-eye"></i></a>
-                        <a title="Detail" asp-controller="User" asp-action="ChangePassword" asp-route-Id="@item.Id" class="btn btn-sm btn-danger mx-2"><i class="bi bi-eye"></i></a>
+                        @*<a title="Detail" asp-controller="User" asp-action="ChangePassword" asp-route-Id="@item.Id" class="btn btn-sm btn-danger mx-2"><i class="bi bi-eye"></i></a>*@
                     </div>
                 </td>
             </tr>
