--- a/src/Presentation/Web/Views/User/Login.cshtml
+++ b/src/Presentation/Web/Views/User/Login.cshtml
@@ -36,7 +36,9 @@
         </form>
     </div>
 </div>
-
+<div>
+    <a asp-action="ForgetPassword">Forget Password</a>
+</div>
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
 }
