--- a/src/Presentation/Web/Views/User/ChangePassword.cshtml
+++ b/src/Presentation/Web/Views/User/ChangePassword.cshtml
@@ -12,7 +12,6 @@
     <div class="col-md-4">
         <form asp-action="ChangePassword">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <input type="hidden" asp-for="Id" />
             <div class="form-group">
                 <label asp-for="Password" class="control-label"></label>
                 <input asp-for="Password" class="form-control" />
@@ -29,7 +28,7 @@
                 <span asp-validation-for="ConfirmPassword" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="Update" class="btn btn-primary" />
                 <a asp-action="Index" class="btn btn-outline-danger">Back to List</a>
             </div>
         </form>
