--- a/src/Presentation/Web/Views/User/EditUser.cshtml
+++ b/src/Presentation/Web/Views/User/EditUser.cshtml
@@ -40,7 +40,7 @@
             </div><br />
             <div class="xol-sm-2">
                 <label asp-for="Role" class="label-control" ></label>
-                <select asp-for="Role" class="form-control" multiple>
+                <select class="form-select form-select-lg" multiple asp-for="Role" class="form-control">
                     @foreach(var role in Model.Roles)
                     {
                         <option value="@role.Id" class="text-danger" >@role.Name</option>
