--- a/src/Presentation/Web/Views/User/Index.cshtml
+++ b/src/Presentation/Web/Views/User/Index.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>Index</h1>
+<h1>User List</h1>
 <div class="row">
     <div class="col">
         <a asp-action="RegisterUser" class="btn btn-sm btn-primary pull-right">Create New</a>
