--- a/src/Presentation/Web/Views/Permission/Edit.cshtml
+++ b/src/Presentation/Web/Views/Permission/Edit.cshtml
@@ -12,11 +12,7 @@
     <div class="col-md-4">
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="PermissionId" class="control-label"></label>
-                <input asp-for="PermissionId" class="form-control" />
-                <span asp-validation-for="PermissionId" class="text-danger"></span>
-            </div>
+            <input type="hidden" asp-for="PermissionId" />
             <div class="form-group">
                 <label asp-for="Name" class="control-label"></label>
                 <input asp-for="Name" class="form-control" />
@@ -31,7 +27,7 @@
                 <label asp-for="ActionName" class="control-label"></label>
                 <input asp-for="ActionName" class="form-control" />
                 <span asp-validation-for="ActionName" class="text-danger"></span>
-            </div>
+            </div><br />
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
                  <a asp-action="Index" class="btn btn-outline-danger">Back to List</a>
