--- a/src/Presentation/Web/Views/Role/Index.cshtml
+++ b/src/Presentation/Web/Views/Role/Index.cshtml
@@ -31,6 +31,7 @@
                     <div class="w-75 btn-group" role="group">
                         <a title="Edit" asp-controller="Role" asp-action="ManageRole" asp-route-Id="@item.Id" class="btn btn-danger mx-2" ><i class="bi bi-shield-lock"></i></a>
                           <a title="Detail" asp-controller="Role" asp-action="RoleDetails" asp-route-Id="@item.Id" class="btn btn-sm btn-dark mx-2"><i class="bi bi-eye"></i></a>
+                          <a title="Delete" asp-controller="Role" asp-action="Delete" asp-route-Id="@item.Id" class="btn btn-sm btn-danger mx-2"><i class="bi bi-trash-fill"></i></a>
                     </div>
                 </td>
             </tr>
