--- a/src/Presentation/Web/Views/Category/DeleteCategory.cshtml
+++ b/src/Presentation/Web/Views/Category/DeleteCategory.cshtml
@@ -48,7 +48,7 @@
     </dl>
     
     <form asp-action="DeleteCategory">
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index" class="btn btn-outline-light">Back to List</a>
+        <input type="submit" value="Delete" class="btn btn-danger" /> 
+        <a asp-action="Index" class="btn btn-group-sm">Back to List</a>
     </form>
 </div>
