--- a/src/Presentation/Web/Views/Role/ManageRole.cshtml
+++ b/src/Presentation/Web/Views/Role/ManageRole.cshtml
@@ -1,5 +1,6 @@
 ﻿@model Common.ViewModels.Role.EditRole
 
+ <link rel="stylesheet" href="~/css/rect2.css" asp-append-version="true" />
 @{
     ViewData["Title"] = "ManageRole";
 }
@@ -15,17 +16,18 @@
                 <label asp-for="Name" class="control-label"></label>
                 <input asp-for="Name" class="form-control" />
                 <span asp-validation-for="Name" class="text-danger"></span>
-            </div>
-              <div class="xol-sm-2">
-                <label asp-for="Permission" class="label-control"></label>
-                <select asp-for="Permission" class="form-control" multiple>
-                    @foreach(var permissions in Model.ListPermission)
-                    {
-                        <option value="@permissions.Id" class="text-danger">@permissions.Name</option>
-                    }
-                </select>
-                <span asp-validation-for="Permission" class="text-danger"></span>
             </div><br />
+            <div class="item">
+                <div class="form-group">
+                <h3>Choose Permission :</h3><br />
+                @for (int i = 0; i < Model.ListPermission.Count(); i++)
+                {
+                    <input id="@Model.ListPermission[i].Id" asp-for="@Model.ListPermission[i].IsPermitted" type="checkbox" class="checkbox-rect2"/>
+                    <input asp-for="@Model.ListPermission[i].Id" type="hidden" />
+                    <label for="@Model.ListPermission[i].Id" class="checkbox-rect2">@Model.ListPermission[i].Name</label>
+                }
+                </div>
+            </div><br /><br />
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
                 <a asp-action="Index" class="btn btn-outline-dark">Back to List</a>
@@ -34,7 +36,8 @@
     </div>
 </div>
 
-
 @section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
-}
+    @{
+        await Html.RenderPartialAsync("_ValidationScriptsPartial");
+    }
+    }
