--- a/src/Presentation/Web/Views/Role/ManageRole.cshtml
+++ b/src/Presentation/Web/Views/Role/ManageRole.cshtml
@@ -17,14 +17,14 @@
                 <input asp-for="Name" class="form-control" />
                 <span asp-validation-for="Name" class="text-danger"></span>
             </div><br />
-            <div class="item">
+            <div class="custom-control custom-checkbox">
                 <div class="form-group">
                 <h3>Choose Permission :</h3><br />
                 @for (int i = 0; i < Model.ListPermission.Count(); i++)
                 {
-                    <input id="@Model.ListPermission[i].Id" asp-for="@Model.ListPermission[i].IsPermitted" type="checkbox" class="checkbox-rect2"/>
+                    <input id="@Model.ListPermission[i].Id" asp-for="@Model.ListPermission[i].IsPermitted" type="checkbox" class="custom-control-input"/>
                     <input asp-for="@Model.ListPermission[i].Id" type="hidden" />
-                    <label for="@Model.ListPermission[i].Id" class="checkbox-rect2">@Model.ListPermission[i].Name</label>
+                    <label for="@Model.ListPermission[i].Id" class="custom-control-label">@Model.ListPermission[i].Name</label>
                 }
                 </div>
             </div><br /><br />
