--- a/src/Presentation/Web/Views/Ticket/Index.cshtml
+++ b/src/Presentation/Web/Views/Ticket/Index.cshtml
@@ -1,5 +1,4 @@
 ﻿@model IEnumerable<Repository.Entites.Ticket>
-
 @{
     ViewData["Title"] = "Index";
 }
@@ -49,43 +48,43 @@
             {
                 foreach (var item in Model)
                 {
-                   //if(User = ){
-                       <tr>
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.TicketDetails)
-                                </td>
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.CreatedBy)
-                                </td>
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.CreatedDateTime)
-                                </td>
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.ModifiedDateTime)
-                                </td>
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.ModifiedBy)
-                                </td>
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.AssignedTo)
-                                </td>
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.CategoryName)
-                                </td>
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.Status)
-                                </td>
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.ImageName)
-                                </td>
-                                <td>
-                                    <div class="w-75 btn-group" role="group">
-                                        <a title="Edit"  asp-controller="Ticket" asp-action="EditTicket" asp-route-TicketId="@item.TicketId" class="btn btn-primary mx-2"><i class="bi bi-pencil-square"></i></a>
-                                        <a title="Detail" asp-controller="Ticket" asp-action="DetailTicket" asp-route-TicketId="@item.TicketId" class="btn btn-sm btn-danger mx-2"><i class="bi bi-eye"></i></a>
-                                        <a title="Delete" asp-controller="Ticket" asp-action="Delete" asp-route-TicketId="@item.TicketId" class="btn btn-sm btn-danger mx-2"><i class="bi bi-trash-fill"></i></a>
-                                    </div>
-                                </td>
-                            </tr>}else{
+                   ////if(User.Claims =){
+                   //    <tr>
+                   //             <td>
+                   //                 @Html.DisplayFor(modelItem => item.TicketDetails)
+                   //             </td>
+                   //             <td>
+                   //                 @Html.DisplayFor(modelItem => item.CreatedBy)
+                   //             </td>
+                   //             <td>
+                   //                 @Html.DisplayFor(modelItem => item.CreatedDateTime)
+                   //             </td>
+                   //             <td>
+                   //                 @Html.DisplayFor(modelItem => item.ModifiedDateTime)
+                   //             </td>
+                   //             <td>
+                   //                 @Html.DisplayFor(modelItem => item.ModifiedBy)
+                   //             </td>
+                   //             <td>
+                   //                 @Html.DisplayFor(modelItem => item.AssignedTo)
+                   //             </td>
+                   //             <td>
+                   //                 @Html.DisplayFor(modelItem => item.CategoryName)
+                   //             </td>
+                   //             <td>
+                   //                 @Html.DisplayFor(modelItem => item.Status)
+                   //             </td>
+                   //             <td>
+                   //                 @Html.DisplayFor(modelItem => item.ImageName)
+                   //             </td>
+                   //             <td>
+                   //                 <div class="w-75 btn-group" role="group">
+                   //                     <a title="Edit"  asp-controller="Ticket" asp-action="EditTicket" asp-route-TicketId="@item.TicketId" class="btn btn-primary mx-2"><i class="bi bi-pencil-square"></i></a>
+                   //                     <a title="Detail" asp-controller="Ticket" asp-action="DetailTicket" asp-route-TicketId="@item.TicketId" class="btn btn-sm btn-danger mx-2"><i class="bi bi-eye"></i></a>
+                   //                     <a title="Delete" asp-controller="Ticket" asp-action="Delete" asp-route-TicketId="@item.TicketId" class="btn btn-sm btn-danger mx-2"><i class="bi bi-trash-fill"></i></a>
+                   //                 </div>
+                   //             </td>
+                   //         </tr>}else{
                     
                         if (User.Identity.Name == item.CreatedBy)
                         {
@@ -120,15 +119,13 @@
                                 </td>
                                 <td>
                                     <div class="w-75 btn-group" role="group">
-                                        <a title="Edit"  asp-controller="Ticket" asp-action="EditTicket" asp-route-TicketId="@item.TicketId" class="btn btn-primary mx-2"><i class="bi bi-pencil-square"></i></a>
-                                        <a title="Detail" asp-controller="Ticket" asp-action="DetailTicket" asp-route-TicketId="@item.TicketId" class="btn btn-sm btn-danger mx-2"><i class="bi bi-eye"></i></a>
                                         <a title="Delete" asp-controller="Ticket" asp-action="Delete" asp-route-TicketId="@item.TicketId" class="btn btn-sm btn-danger mx-2"><i class="bi bi-trash-fill"></i></a>
                                     </div>
                                 </td>
                             </tr>
                     }
                 }     
-            }
+            
         }
         }
 
