--- a/src/Presentation/Web/Views/User/EditUser.cshtml
+++ b/src/Presentation/Web/Views/User/EditUser.cshtml
@@ -36,16 +36,17 @@
                 <input asp-for="PhoneNumber" class="form-control" />
                 <span asp-validation-for="PhoneNumber" class="text-danger"></span>
             </div><br />
-          <div class="xol-sm-2">
-                <label asp-for="Role" class="label-control" ></label>
-                <select class="form-select form-select-lg" multiple asp-for="Role" class="form-control">
-                    @foreach(var role in Model.Roles)
+         <div class="custom-control custom-checkbox col-md-4">
+             <div class="form-group">
+                 <h3>Assign Role</h3><br />
+                    @for(int i = 0; i < Model.Roles.Count(); i++)
                     {
-                        <option value="@role.Id" class="text-danger" >@role.Name</option>
+                        <input id="@Model.Roles[i].Id" asp-for="@Model.Roles[i].IsSelected" type="checkbox" class="custom-control-input"/>
+                        <input asp-for="@Model.Roles[i].Id" type="hidden"/>
+                        <label for="@Model.Roles[i].Id" class="custom-control-label">@Model.Roles[i].Name</label>
                     }
-                </select>
-                <span asp-validation-for="Role" class="text-danger"></span>
-            </div>
+                </div>
+         </div> 
             
             <br />
             <div class="form-group">
