--- a/src/Presentation/Web/Views/Shared/_Layout.cshtml
+++ b/src/Presentation/Web/Views/Shared/_Layout.cshtml
@@ -57,6 +57,9 @@
                              <li class="nav-item">
                                 <a class="nav-link text-dark" asp-area="" asp-controller="User" asp-action="UserProfile">Profile</a>
                             </li> 
+                             <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="CompanyExcel" asp-action="Index">Company</a>
+                            </li>
                             <li class="nav-item">
                                 <a class="nav-link text-dark" asp-area="" asp-controller="User" asp-action="Logout">Logout</a>
                             </li> 
