--- a/src/Presentation/Web/Views/Ticket/DeveloperIndex.cshtml
+++ b/src/Presentation/Web/Views/Ticket/DeveloperIndex.cshtml
@@ -49,7 +49,7 @@
             <div class="w-75 btn-group" role="group">
                      <a title="Edit"  asp-controller="Ticket" asp-action="EditTicket" asp-route-TicketId="@item.TicketId" class="btn btn-primary mx-2"><i class="bi bi-pencil-square"></i></a>
                             <a title="Detail" asp-controller="Ticket" asp-action="DetailTicket" asp-route-TicketId="@item.TicketId" class="btn btn-sm btn-danger mx-2"><i class="bi bi-eye"></i></a>
-                            <a title="Delete" asp-controller="Ticket" asp-action="Delete" asp-route-TicketId="@item.TicketId" class="btn btn-sm btn-danger mx-2"><i class="bi bi-trash-fill"></i></a>                </div>
+                            <a title="Close" asp-controller="Ticket" asp-action="CloseTicket" asp-route-TicketId="@item.TicketId" class="btn btn-sm btn-danger mx-2"><i class="bi bi-x-circle-fill"></i></a>                </div>
                 </td>
         </tr>
 }                
