--- a/src/Presentation/Web/Views/FieldValidate/Index.cshtml
+++ b/src/Presentation/Web/Views/FieldValidate/Index.cshtml
@@ -38,7 +38,10 @@
                             @Html.DisplayFor(modelItem => item.Name)
                         </td>
                         <td>
-                        </td>
+                    <div class="w-75 btn-group" role="group">
+                        <a title="Edit" asp-controller="FieldValidate" asp-action="Edit" asp-route-Id="@item.Id" class="btn btn-sm btn-primary mx-2"><i class="bi bi-pencil-square"></i></a>
+                     </div>
+                </td>
                     </tr>
                 }
             }
