--- a/src/Presentation/Web/Views/Shared/_Layout.cshtml
+++ b/src/Presentation/Web/Views/Shared/_Layout.cshtml
@@ -47,7 +47,7 @@
                                     <a class="nav-link text-dark" asp-area="" asp-controller="Role" asp-action="Index">Role</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link text-dark" asp-area="" asp-controller="Combine" asp-action="Index">UserRole</a>
+                                    <a class="nav-link text-dark" asp-area="" asp-controller="Role" asp-action="UserRole">UserRole</a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link text-dark" asp-area="" asp-controller="Ticket" asp-action="UserIndex">UserTicket</a>
