--- a/src/Presentation/Web/Views/Shared/_Layout.cshtml
+++ b/src/Presentation/Web/Views/Shared/_Layout.cshtml
@@ -27,7 +27,7 @@
                         <ul class="navbar-nav flex-grow-1">
                             @if (User.Identity.IsAuthenticated)
                             {
-                                if (Web.StaticModel.PermissionChecker.HasPermission(User.Identity.Name,"View_Category"))
+                                @*if (Web.StaticModel.PermissionChecker.HasPermission(User.Identity.Name,"View_Category"))*@
                                 {
                                     <li class="nav-item">
                                         <a class="nav-link text-dark" asp-area="" asp-controller="Category" asp-action="Index">Category</a>
