--- a/src/Presentation/Web/Views/User/UserProfile.cshtml
+++ b/src/Presentation/Web/Views/User/UserProfile.cshtml
@@ -5,30 +5,27 @@
 }
 
 <h1>UserProfile</h1>
-
-<h4>UserProfile</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
         <form asp-action="UserProfile" enctype="multipart/form-data">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="col-md-6"
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-           
-                <dt class="col-sm-2">
-          ProfilePic
-    </dt>
-    <dt class="col-sm-2">
-        <img src="@("~/Profile/" + Model.ProfilePic)" asp-append-version="true" width="200px" height="200px" />
-    </dt>
-    
 
-        <div class="form-gropup">
+            <dt class="col-sm-5">
+                Profile Picture
+            </dt>
+            <dt class="col-sm-2">
+                <img src="@("~/profile/" + Model.ImageName)" asp-append-version="true" width="200px" height="200px" border="0" img class="rounded-circle me-1"/><br />
+                <h4>@User.Identity.Name</h4><br />
+            </dt>
+            <div class="col-md-6">
+                   <div class="form-gropup">
                         <label asp-for="ProfilePic" class="control-label"></label>
                         <input asp-for="ProfilePic" accept="image/*" />
                         <span asp-validation-for="ProfilePic" class="text-danger"></span>
+
                     </div><br />    
-        </div>
+            </div>
             <div class="form-group">
                 <label asp-for="FirstName" class="control-label"></label>
                 <input asp-for="FirstName" class="form-control" />
